<resources>
    <string name="app_name">Nyaa Nyaa Music Player</string>

    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_about">About</string>
    <string name="actionbar_homelink">Link</string>
    <string name="actionbar_details">Details</string>

    <string name="actionbar_refresh">Refresh</string>
    <string name="actionbar_add">Add</string>
    <string name="actionbar_add_all">Add all</string>
    <string name="actionbar_clear_queue">Clear queue</string>

    <string name="actionbar_remove">Remove</string>

    <string name="queue_name">Queue</string>

    <string name="popupmenu_remove">Remove</string>
    <string name="popupmenu_select">Select</string>

    <string name="snackbar_clear_x_tracks">Cleared %1$d tracks from the queue</string>
    <string name="snackbar_add_x_tracks">Added %1$d tracks to the queue</string>
    <string name="snackbar_choose_track">Choose a track first</string>


    <string name="service_musicplayback_notification_title">Music</string>
    <string name="service_musicplayback_notification_message">Unknown</string>
    <string name="service_musicplayback_notification_pause_message">Pause</string>
    <string name="service_musicplayback_notification_play_message">Play</string>

    <string name="fragment_name_music_list">Music</string>
    <string name="fragment_name_album">Album</string>
    <string name="fragment_name_artist">Artist</string>

    <string name="fragment_player_bar_play">Play</string>
    <string name="fragment_player_bar_pause">Pause</string>
    <string name="fragment_player_bar_next">Next</string>
    <string name="fragment_player_bar_prev">Prev</string>

    <string name="description_more_overflow">Image to indicate more overflow options</string>

    <string name="no_data_available">No data found</string>
    <string name="no_music_found">No music found</string>
    <string name="no_albums_found">No albums found</string>
    <string name="no_artists_found">No artists found</string>
    <string name="empty_queue">The music queue is empty</string>

    <string name="preference_title">Settings</string>
    <string name="preference_about_category_key">about_category_key</string>
    <string name="preference_about_category_title">About</string>
    <string name="preference_about_version_key">about_key</string>
    <string name="preference_about_version_title">App Version</string>
    <string name="preference_about_version_link">https://github.com/Nydrani/NyaaNyaaMusicPlayer</string>

    <string name="preference_advanced_category">Advanced</string>
    <string name="preference_advanced_key">advanced_settings</string>
    <string name="preference_advanced_title">Advanced Settings</string>
    <string name="preference_advanced_summary">Settings for advanced users</string>

    <string name="preference_theme_key">theme</string>
    <string name="preference_theme_title">Theme</string>

    <string name="preference_theme_light">Light</string>
    <string name="preference_theme_dark">Dark</string>
    <string name="preference_theme_light_value">1</string>
    <string name="preference_theme_dark_value">2</string>

    <string name="preference_about_anonymous_data_key">anonymous_data</string>
    <string name="preference_about_anonymous_data_title">Report crashes &amp; usage data</string>

    <string name="content_description_button">Image for button</string>

    <string name="dialog_restart_title">Notice</string>
    <string name="dialog_restart_message">Disabling crash reporting requires an app restart. Do you want to restart now?</string>
    <string name="dialog_restart_positive">Restart</string>
    <string name="dialog_restart_negative">Later</string>


    <plurals name="num_albums">
        <item quantity="one">%1$d album</item>
        <item quantity="other">%1$d albums</item>
    </plurals>
    <plurals name="num_tracks">
        <item quantity="one">%1$d track</item>
        <item quantity="other">%1$d tracks</item>
    </plurals>


</resources>
