<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionbar_homelink"
        android:title="@string/actionbar_homelink"
        android:enabled="false" />

    <item
        android:id="@+id/actionbar_refresh"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/actionbar_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionbar_library"
        android:title="@string/actionbar_library" />

    <item
        android:id="@+id/actionbar_about"
        android:title="@string/actionbar_about" />

    <item
        android:id="@+id/actionbar_settings"
        android:title="@string/actionbar_settings" />

</menu>